--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ nav .nav-link{
     line-height: 0.7rem;
 }
 #footer i{
+    padding: 20px 10px 40px;
     color: #000;
     font-size: 2rem;
     text-decoration: none;
@@ -143,13 +144,8 @@ nav .nav-link{
 #footer i:hover{
     color: #ff4c68;
 }
-#footer .row{
-    margin: 1rem auto;
-    width: 35%;
-}
-#footer .col{
-    padding: 0;
-}
+
+
 @media only screen and (max-width: 1350px) {
     #title{
         text-align: center;
